added function to the templateliterals

--- a/template Literals.htm
+++ b/template Literals.htm
@@ -8,9 +8,12 @@
 </head>
 <body>
     <script>
+        function fun(){
+            return "14/07/1994";
+        };
         let a="ramanji";
 let b="Vuyyala";
-let c= `fullname is ${b} ${a}`;
+let c= `fullname is ${b} ${a} and DOB is ${fun()}`;
 console.log(c);
 
     </script>
