some more about arrow functions

--- a/Arrowfun.htm
+++ b/Arrowfun.htm
@@ -17,7 +17,10 @@
         // arrow function
         let add1 = (x,y)=>x+y;
         document.write(add1(33,22)+ " " + "from arrow function");
-
+        document.write("<br>");
+        const names=["rama","syam","aann","jdhsd"];
+        const result=names.map(name=>name.toUpperCase());
+        document.write(result);
     </script>
 </body>
 </html>
